gst/gstpreset.h
@@ -23,6 +23,7 @@
 #define __GST_PRESET_H__
 
 #include <glib-object.h>
+#include <gst/gstconfig.h>
 
 G_BEGIN_DECLS
 
